feat: remove old schemas and fix java for newer versions to remove warnings
BREAKING CHANGE: